[package]
name = "wlr-workspace-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-scanner = { version = "0.29.5" }
wayland-backend = { version = "0.1.0-beta.10" }
wayland-client = { version = "0.29.5", optional = true }
wayland-server = { version = "0.29.5", optional = true }
wayland-protocols = { version = "0.29.5" }
bitflags = "1.0"

[features]
client = ["wayland-client", "wayland-protocols/client"]
server = ["wayland-server", "wayland-protocols/server"]