[package]
name = "wlr-workspace-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-scanner = { git = "https://github.com/Smithay/wayland-rs" }
wayland-backend = { git = "https://github.com/Smithay/wayland-rs" }
wayland-client = { git = "https://github.com/Smithay/wayland-rs", optional = true }
wayland-server = { git = "https://github.com/Smithay/wayland-rs", optional = true }
wayland-protocols = { git = "https://github.com/Smithay/wayland-rs" }
bitflags = "1.0"

[features]
client = ["wayland-client", "wayland-protocols/client"]
server = ["wayland-server", "wayland-protocols/server"]