[package]
name = "wlr-workspace-rs"
version = "0.1.1"
edition = "2021"
description = "Generated wayland protocol for wlr-workspaces extension for use with Hyprland"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-scanner = { version = "0.30.0-beta.10" }
wayland-backend = { version = "0.1.0-beta.10" }
wayland-client = { version = "0.30.0-beta.10" }
bitflags = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

